fixed clipping content around nav bar

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,4 +1,4 @@
-@use '../../styles';
+@use "../../styles";
 
 .about-container {
   @include styles.flexCenter(center, column);
@@ -29,7 +29,8 @@
         height: 45vh;
       }
       @media (max-width: styles.$screen-sm-max) {
-        margin: 0px;
+        height: auto;
+        margin: 0px 0px 0px 0px;
         border-radius: 0px;
       }
       .text-container {
@@ -100,9 +101,10 @@
         }
       }
       .banner-image-mobile {
+        position: relative;
         display: none;
         @media (max-width: styles.$screen-md-max) {
-          display: block;
+          display: flex;
           width: 100%;
           height: 100%;
           object-fit: cover;
@@ -110,7 +112,7 @@
           margin: 0px 0px 0px 0px;
         }
         @media (max-width: styles.$screen-sm-max) {
-          display: block;
+          display: flex;
           width: 100%;
           height: 100%;
           object-fit: cover;
@@ -133,7 +135,7 @@
         height: 736px;
       }
       @media (max-width: styles.$screen-sm-max) {
-        height: 865px;
+        height: auto;
         border-radius: 0px;
       }
       .talent-image {
